# BoxE

./: .gitignore  TODO  astyle-remove-backup.sh  astyle.sh  astylerc  backup.sh  remove-tilda-backup.sh
core/: CMakeLists.txt  Doxyfile
core/BoxE/: BAsciiString  BBuffer  BByteArray  BComplexd  BComplexf  BDataStream  BFile  BLibrary  BLinkedList  BMatrix4x4f  BReferenceCounter  BSignalSlot  BTime  BVariant  BVector2f  BoxECore  basciistring.h  bbuffer.h  bcomplexd.h  bcomplexf.h  bfile.h  bhash.h  bhit3.h  biodevice.h  blibrary.h  blinkedlist.h  bmatrix4x4f.h  boxe-unix-config.h  bquaternion.h  breferencecounter.h  bsettings.h  bsignal1.h  bsignal2.h  btextstream.h  bvector.h  bvector3f.h  bvector4f.h  ehittype.h
core/include/: BHit3  BIODevice  BIntersect3  BMatrix3x3f  BPair  BPlane3f  BRay3f  BSphere3f  BStack  BThread  BVector3f  BVector4f  bbytearray.h  bdatastream.h  bglobal.h  bgoniometry.h  bhash.h  bintersect3.h  biodevice.h  bmatrix3x3f.h  boxe-config.h  boxe-win-config.h  bpair.h  bplane3f.h  bquaternion.h  bray3f.h  bsignal0.h  bsignalslot.h  bsphere3f.h  bstack.h  bthread.h  btime.h  bvariant.h  bvector2f.h
core/src/: basciistring.cpp  bbuffer.cpp  bbytearray.cpp  bcomplexd.cpp  bcomplexf.cpp  bdatastream.cpp  bfile.cpp  bglobal.cpp  bhash.cpp  bhit3.cpp  bintersect3.cpp  biodevice.cpp  blibrary.cpp  blinkedlist.cpp  bmatrix3x3f.cpp  bmatrix4x4f.cpp  bpair.cpp  bplane3f.cpp  bquaternion.cpp  bray3f.cpp  breferencecounter.cpp  bsettings.cpp  bsphere3f.cpp  bstack.cpp  btextstream.cpp  bthread.cpp  btime.cpp  bvariant.cpp  bvector.cpp  bvector2f.cpp  (+2 more)
(+1 files in other folders)
